# myelin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: demo_synthetic.json  stage2_g2.json  stage2_g3.json
docs/: DESIGN.md  PLAN.md  RESEARCH.md
docs/refs/: bitnet_tips.txt  bpe_experiment.py
kernel/: Cargo.toml  pyproject.toml
kernel/examples/: bench.rs
kernel/src/: bitplane.rs  gemv.rs  lib.rs  py.rs
kernel/tests/: golden.json  golden.rs
myelin/: __init__.py  allocator.py  bitplane.py  config.py  data.py  layers.py  model.py  signals.py  tokenizer.py  train.py
scripts/: analyze.py  gen_golden.py  generate.py  h1_probe.py  posthoc_sweep.py  prepare_data.py  run_matrix.py  stage2_verdict.py  validate_kernel.py
tests/: test_allocator.py  test_bitplane.py  test_layers.py  test_model.py  test_signals.py  test_train_smoke.py
