[project]
name = "myelin"
version = "0.1.0"
description = "Connectivity-aware dynamic precision allocation for transformer training"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
data = [
    "tokenizers>=0.15",
    "datasets>=2.18",
]
dev = [
    "pytest>=8",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["myelin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
